<resources>
    <string name="app_name">Ekisan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--Facebook-->
    <string name="facebook_app_id">702919830442875</string>
    <string name="fb_login_protocol_scheme">fb702919830442875</string>
    <string name="google_map_key">AIzaSyDp2tJLmz-zOebSOEoH8A7keJS_-k7ZM8s</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Orders</string>
    <string name="share">Share</string>
    <string name="notification">Notifications</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="name">Name</string>
    <string name="house_no">House No.</string>
    <string name="street">Street</string>
    <string name="mobile_no">Mobile No</string>
    <string name="pincode">Pin Code</string>
    <string name="city">City</string>
    <string name="complete_Address">Complete Address</string>
    <string name="sav_and_continue">Save and Continue</string>
    <string name="bank_details">Bank Details</string>
    <string name="ban_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="acount_number">Account Number</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="ifsc">Ifsc</string>
    <string name="zip_code">Zip Code</string>
    <string name="address">Address</string>
    <string name="vegetable">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="products">Products</string>
    <string name="submt">SUBMIT</string>
    <string name="approval">Approval</string>
    <string name="by_admin">By Admin</string>
    <string name="self">Self</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="total_amount">Total Amount :-</string>
    <string name="payment_by">Payment By</string>
    <string name="cash">Cash</string>
    <string name="paytm">Paytm</string>
    <string name="contact_on">Contact on :</string>
    <string name="category">Categories</string>
    <string name="fruits_veg">Fruits and Vegetable</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="noorer">No orders assigned yet.</string>
    <string name="login">Login</string>
    <string name="already_account">Already Have Account?</string>
    <string name="register">Register</string>
    <string name="entermob">Enter Mobile Number</string>
    <string name="submit_log">SUBMIT</string>
    <string name="choose_delivery_date">Choose Delivery Date</string>
    <string name="please_select_date">Please select date</string>
    <string name="choose_delevery_action">Choose Delivery Option</string>
    <string name="proceed">Proceed to pay</string>
    <string name="order_detail">Order Details</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="company_name">Company Name</string>
    <string name="would_you_like">Would you like to receive notification via email?</string>
    <string name="update">UPDATE</string>
    <string name="review">Product Review</string>
    <string name="fresh_best">Fresh and best</string>
    <string name="title">Title</string>
    <string name="good">Good</string>
    <string name="alert">Alert</string>
    <string name="offers">Offers</string>
    <string name="new_user">New User?</string>
    <string name="clcik_here">Click Here</string>
    <string name="text1">Fill in the fields and join us!</string>
    <string name="send_otp_login">Send OTP</string>
    <string name="or">OR</string>
    <string name="loging_for_fb">Login with Facebook</string>
    <string name="login_for_google">Login with Google</string>
    <string name="agro_item">Agro Item</string>
    <string name="agro_news">Agro News</string>
    <string name="problem_solution">Problem Solution</string>
    <string name="contact_us">Contact Us</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="search_for_area">Search for area landmark and apratment</string>
    <string name="choose_loc">Choose Location</string>
    <string name="add_new_address">Add New Address</string>
    <string name="my_profile">My Profile</string>
    <string name="login_for_farmer">Login For Farmer</string>
    <string name="login_for_deliver">Login For Delivery</string>
    <string name="customer_support">Customers Support</string>
    <string name="checkout">Checkout</string>
    <string name="accepted">ACCEPTED</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="ur_wallet_bal">Your Wallet Balance</string>
    <string name="add_money">Add Money</string>
    <string name="transaction">Transactions</string>
    <string name="summary">Summery</string>
    <string name="items">Items</string>
    <string name="slots">Delivery Slot</string>
    <string name="payment_detail">Payment Details</string>
    <string name="order_success">Order Success</string>
    <string name="continuew_shopping">Continue Shopping</string>
    <string name="total_order_amount">Total Order Amount :</string>
    <string name="my_wallet">My Wallet</string>
    <string name="pay_now">Pay Now</string>
    <string name="place_order">Place Order</string>
    <string name="varities">Varieties</string>
    <string name="produced_by">Produced By</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
    <string name="my_package">My Packages</string>
    <string name="my_delivery_address">My Deliver Address</string>
    <string name="review_rating">Review and Rating</string>
    <string name="to_be_review">To be reviewed</string>
    <string name="reviewed">Reviewed</string>
    <string name="what_do_you_need">What Do you Need?</string>
    <string name="vendor_login_page">Vendor Login Page!</string>
    <string name="edit_veg">Edit Vegetables</string>
    <string name="help">Help</string>
    <string name="addhar_no">Adhar Number</string>
    <string name="addplus">+   Add</string>
    <string name="balance">Balance</string>
    <string name="request_by_cash">Request by cash</string>
    <string name="request_by_bank">Request by bank</string>
    <string name="please_update_no">Please update mobile</string>
    <string name="cancel">Cancel</string>
    <string name="new_vendor">New vendor here?</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="reg_now">Register Now</string>
    <string name="demand">Demand</string>
    <string name="collection">Collection</string>
    <string name="wallet">Wallet</string>
    <string name="kisan_suvidha">Kishan Suvidha</string>
    <string name="sale">Sale</string>
    <string name="collections">Collections</string>
    <string name="today_collections">Today Collections</string>
    <string name="weight_hint">Weight</string>
    <string name="price_hint">Price</string>
    <string name="sale_request">Sale Request</string>
    <string name="tab_collections">Tab Collections</string>
    <string name="type_a_message_here">Type a message here...</string>
    <string name="right">right</string>
    <string name="timer">00:00</string>
    <string name="left">left</string>
    <string name="chat_support">Chat Support</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
functionality.</string>
    <string name="gps_network_not_enabled">gps network not enabled</string>
    <string name="open_location_settings">open location settings</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="app_update">There is newer version of this application available.\n please upgrade now.</string>
</resources>
