<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        />-->
    <AutoCompleteTextView
        android:id="@+id/auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sp"
        android:textSize="12sp"
        android:background="@color/white"
        android:maxLines="1"
        android:hint="Search Here" />
    <!--<com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
        android:id="@+id/places_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:pacv_googleMapsApiKey="@string/google_api_key"/>-->
<RelativeLayout
    android:id="@+id/llLayout"
    android:layout_width="match_parent"
    android:layout_below="@id/auto"
    android:layout_height="350dp">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/frame"
        android:layout_height="match_parent"></FrameLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:src="@mipmap/location_mark"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"></ImageView>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:background="#fff"

        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

    <Button
        android:id="@+id/delivery"
        android:text="@string/delivery_address"
        android:background="@drawable/yellow_bg_wound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <ScrollView
            android:layout_width="match_parent"


            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <LinearLayout

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/name"
                            android:singleLine="true" />

                        <EditText
                            android:id="@+id/edt_house"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/house_no"
                            android:singleLine="true" />

                        <EditText
                            android:id="@+id/edt_street"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/street"
                            android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/edt_mobile"
                android:singleLine="true"
                android:digits="1234567890"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no" />
            <EditText
                android:id="@+id/edt_pin"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                 android:hint="@string/pincode" />
            <EditText
                android:id="@+id/edt_city"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"/>

        </LinearLayout>

        </LinearLayout>
        <EditText
            android:id="@+id/edt_complete_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:maxLines="3"
             android:hint="@string/complete_Address" />
        <TextView
            android:id="@+id/save_continue"
            android:text="@string/sav_and_continue"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="20sp"
            android:background="@color/orange"
            android:layout_marginTop="15sp"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
