<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        layout="@layout/vendor_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navi_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|top">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/homedashboard"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:visibility="visible"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txt_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/title_home"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/todaysalerequestLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_salerequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/sale_request">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/todaycollectionLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_todaycollections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/today_collections">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/collectionLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_collections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/collections">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/collectionLayoutTab"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_collections_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/tab_collections">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chatsupport"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_chat_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/chat_support">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txt_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/profile"></TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_edt_veg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/edit_veg"></TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/orderLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/help"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="10sp"
                    android:text="Bank Details"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="Login For Vendor"></TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/logoutLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="@string/logout"></TextView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_language"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txt_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="18dp"
                    android:text="English"></TextView>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
