<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/left_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/out_message_bg"
        android:orientation="vertical"
        android:padding="10dp" >

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="right"
	            android:orientation="vertical" >
	
	            <TextView
	                android:id="@+id/lefttext"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#131a00"
					android:layout_margin="10dp"
	                android:text="@string/left" />
	            <TextView
		            android:id="@+id/left_datetime_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="8sp"
					android:visibility="gone"
		            android:textColor="#001199"
		            android:text="@string/timer" />
	        </LinearLayout>
	       	        
    </RelativeLayout>
	
    <RelativeLayout
        android:id="@+id/right_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:orientation="vertical"
       	android:layout_gravity="right"
        android:gravity="right"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:background="@drawable/in_message_bg"
            android:orientation="vertical"
            android:padding="10dp" >
            		
            <TextView
                android:id="@+id/righttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:textColor="#66ff66"
                android:text="@string/right" />
            <TextView
		            android:id="@+id/right_datetime_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="8sp"
					android:visibility="gone"
		            android:textColor="#001199"
		            android:text="@string/timer" />
            
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>