<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/agroItem"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/agro_item"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/agroNews"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/agro_news"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/problem_solution"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contact_us"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>