<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55.0dip"
        android:gravity="left|center"
        android:background="@color/vendor_action_bar_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivDrawer"
            android:layout_width="55.0dip"
            android:layout_height="55dp"
            android:visibility="gone"
            android:padding="15dp"
            android:src="@drawable/ic_home_menu" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/dashboard"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/color_white"
            android:textSize="18.0dip" />
        <ImageView
            android:id="@+id/history"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_toLeftOf="@+id/logout"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dim_10"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_h_letter"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/logout"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/color_white"
            android:textSize="18.0dip" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/Recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/delivery_dashboard_list_item"
        tools:itemCount="10"
        tools:orientation="vertical"
        tools:scrollbars="vertical"
      />
    <TextView
        android:id="@+id/no_found"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/noorer"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textSize="18.0dip" />
</LinearLayout>
